--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,15 @@
 {
+  "scopedRegistries": [
+    {
+      "name": "package.openupm.com",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.thenathannator"
+      ]
+    }
+  ],
   "dependencies": {
-    "com.thenathannator.hidrogen": "https://github.com/TheNathannator/HIDrogen.git?path=/Packages/com.thenathannator.hidrogen#v0.3.0",
+    "com.thenathannator.hidrogen": "0.4.0",
     "com.unity.ide.rider": "3.0.26",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.7.0",
